댓글 내용 검색 추가

--- a/src/main/resources/templates/posts/search.html
+++ b/src/main/resources/templates/posts/search.html
@@ -24,6 +24,7 @@
                                         <option value="content" th:selected="${searchType == 'content'}">내용</option>
                                         <option value="author" th:selected="${searchType == 'author'}">작성자</option>
                                         <option value="category" th:selected="${searchType == 'category'}">카테고리</option>
+                                        <option value="comment" th:selected="${searchType == 'comment'}">댓글</option>
                                         <option value="title_content" th:selected="${searchType == 'title_content'}">제목+내용</option>
                                         <option value="all" th:selected="${searchType == 'all'}">전체</option>
                                     </select>
