--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -40,6 +40,8 @@
                         <option value="title">제목</option>
                         <option value="content">내용</option>
                         <option value="author">작성자</option>
+                        <option value="comment">댓글</option>
+                        <option value="all">전체</option>
                     </select>
                     <input class="form-control form-control-sm me-2" type="search" name="keyword"
                            placeholder="검색어 입력" aria-label="Search" style="width: 200px;">
